--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
     "expo": {
         "name": "BeenTogether",
         "slug": "BeenTogether",
+        "scheme": "beentogether",
         "version": "1.0.0",
         "orientation": "portrait",
         "icon": "./assets/icon.png",
@@ -24,7 +25,8 @@
         },
         "web": {
             "favicon": "./assets/favicon.png"
-        }
+        },
+        "plugins": ["expo-router"]
     }
 }
 
