--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-screens": "~4.11.1",
     "expo-linking": "~7.1.7",
     "expo-constants": "~17.1.7",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
