--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
     "expo": {
-        "name": "BeenTogether",
-        "slug": "BeenTogether",
-        "scheme": "beentogether",
+        "name": "CoupleTracker",
+        "slug": "CoupleTracker",
+        "scheme": "coupletracker",
         "version": "1.0.0",
         "orientation": "portrait",
         "icon": "./assets/icon.png",
-        "userInterfaceStyle": "light",
+        "userInterfaceStyle": "dark",
         "newArchEnabled": true,
         "splash": {
             "image": "./assets/splash-icon.png",
