--- a/app.json
+++ b/app.json
@@ -5,11 +5,11 @@
         "scheme": "coupletracker",
         "version": "1.0.0",
         "orientation": "portrait",
-        "icon": "./assets/icon.png",
-        "userInterfaceStyle": "dark",
+        "icon": "./assets/HeartHourglass.png",
+        "userInterfaceStyle": "light",
         "newArchEnabled": true,
         "splash": {
-            "image": "./assets/splash-icon.png",
+            "image": "./assets/HeartHourglass.png",
             "resizeMode": "contain",
             "backgroundColor": "#ffffff"
         },
@@ -26,7 +26,8 @@
         "web": {
             "favicon": "./assets/favicon.png"
         },
-        "plugins": ["expo-router"]
+        "plugins": [
+            "expo-router"
+        ]
     }
 }
-
