--- a/app.json
+++ b/app.json
@@ -14,20 +14,31 @@
             "backgroundColor": "#ffffff"
         },
         "ios": {
-            "supportsTablet": true
+            "supportsTablet": true,
+            "infoPlist": {
+                "NSPhotoLibraryUsageDescription": "A képek kiválasztásához a fotógalériából.",
+                "NSUserTrackingUsageDescription": "Szükséges az értesítésekhez."
+            }
         },
         "android": {
             "adaptiveIcon": {
                 "foregroundImage": "./assets/adaptive-icon.png",
                 "backgroundColor": "#ffffff"
             },
-            "edgeToEdgeEnabled": true
+            "edgeToEdgeEnabled": true,
+            "permissions": [
+                "READ_EXTERNAL_STORAGE",
+                "WRITE_EXTERNAL_STORAGE",
+                "NOTIFICATIONS"
+            ]
         },
         "web": {
             "favicon": "./assets/favicon.png"
         },
         "plugins": [
-            "expo-router"
+            "expo-router",
+            "expo-image-picker",
+            "expo-notifications"
         ]
     }
 }
