--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-screens": "~4.11.1",
     "expo-notifications": "~0.31.4",
     "expo-image-picker": "~16.1.4",
-    "expo-dev-client": "~5.2.4"
+    "expo-dev-client": "~5.2.4",
+    "expo-linear-gradient": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
