--- a/app.json
+++ b/app.json
@@ -1,44 +1,52 @@
 {
-    "expo": {
-        "name": "CoupleTracker",
-        "slug": "CoupleTracker",
-        "scheme": "coupletracker",
-        "version": "1.0.0",
-        "orientation": "portrait",
-        "icon": "./assets/HeartHourglass.png",
-        "userInterfaceStyle": "light",
-        "newArchEnabled": true,
-        "splash": {
-            "image": "./assets/HeartHourglass.png",
-            "resizeMode": "contain",
-            "backgroundColor": "#ffffff"
-        },
-        "ios": {
-            "supportsTablet": true,
-            "infoPlist": {
-                "NSPhotoLibraryUsageDescription": "A képek kiválasztásához a fotógalériából.",
-                "NSUserTrackingUsageDescription": "Szükséges az értesítésekhez."
-            }
-        },
-        "android": {
-            "adaptiveIcon": {
-                "foregroundImage": "./assets/adaptive-icon.png",
-                "backgroundColor": "#ffffff"
-            },
-            "edgeToEdgeEnabled": true,
-            "permissions": [
-                "READ_EXTERNAL_STORAGE",
-                "WRITE_EXTERNAL_STORAGE",
-                "NOTIFICATIONS"
-            ]
-        },
-        "web": {
-            "favicon": "./assets/favicon.png"
-        },
-        "plugins": [
-            "expo-router",
-            "expo-image-picker",
-            "expo-notifications"
-        ]
+  "expo": {
+    "name": "CoupleTracker",
+    "slug": "CoupleTracker",
+    "scheme": "coupletracker",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/HeartHourglass.png",
+    "userInterfaceStyle": "light",
+    "newArchEnabled": true,
+    "splash": {
+      "image": "./assets/HeartHourglass.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "ios": {
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSPhotoLibraryUsageDescription": "A képek kiválasztásához a fotógalériából.",
+        "NSUserTrackingUsageDescription": "Szükséges az értesítésekhez."
+      }
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
+      },
+      "edgeToEdgeEnabled": true,
+      "permissions": [
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.NOTIFICATIONS",
+        "android.permission.RECORD_AUDIO"
+      ],
+      "package": "naram99.coupletracker"
+    },
+    "web": {
+      "favicon": "./assets/favicon.png"
+    },
+    "plugins": [
+      "expo-router",
+      "expo-image-picker",
+      "expo-notifications"
+    ],
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "c041a493-dd4e-4f6d-902e-56b0ceb48da6"
+      }
     }
+  }
 }
