--- a/app.json
+++ b/app.json
@@ -1,54 +1,50 @@
 {
-  "expo": {
-    "name": "CoupleTracker",
-    "slug": "CoupleTracker",
-    "scheme": "coupletracker",
-    "version": "1.0.1",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "newArchEnabled": true,
-    "splash": {
-      "image": "./assets/splash-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "ios": {
-      "supportsTablet": true,
-      "infoPlist": {
-        "NSPhotoLibraryUsageDescription": "A képek kiválasztásához a fotógalériából.",
-        "NSUserTrackingUsageDescription": "Szükséges az értesítésekhez."
-      },
-      "icon": "./assets/icon.png"
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#000000"
-      },
-      "edgeToEdgeEnabled": true,
-      "permissions": [
-        "android.permission.READ_EXTERNAL_STORAGE",
-        "android.permission.WRITE_EXTERNAL_STORAGE",
-        "android.permission.NOTIFICATIONS"
-      ],
-      "package": "com.naram99.coupletracker",
-      "versionCode": 1,
-      "versionName": "1.0.1"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "plugins": [
-      "expo-router",
-      "expo-image-picker",
-      "expo-notifications"
-    ],
-    "extra": {
-      "router": {},
-      "eas": {
-        "projectId": "c041a493-dd4e-4f6d-902e-56b0ceb48da6"
-      }
+    "expo": {
+        "name": "CoupleTracker",
+        "slug": "CoupleTracker",
+        "scheme": "coupletracker",
+        "version": "1.0.1",
+        "orientation": "portrait",
+        "icon": "./assets/icon.png",
+        "userInterfaceStyle": "light",
+        "newArchEnabled": true,
+        "splash": {
+            "image": "./assets/splash-icon-main.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
+        "ios": {
+            "supportsTablet": true,
+            "infoPlist": {
+                "NSPhotoLibraryUsageDescription": "A képek kiválasztásához a fotógalériából.",
+                "NSUserTrackingUsageDescription": "Szükséges az értesítésekhez."
+            },
+            "icon": "./assets/testicon.png"
+        },
+        "android": {
+            "adaptiveIcon": {
+                "foregroundImage": "./assets/adaptive-icon-main.png",
+                "backgroundColor": "#c2b280"
+            },
+            "edgeToEdgeEnabled": true,
+            "permissions": [
+                "android.permission.READ_EXTERNAL_STORAGE",
+                "android.permission.WRITE_EXTERNAL_STORAGE",
+                "android.permission.NOTIFICATIONS"
+            ],
+            "package": "com.naram99.coupletracker",
+            "versionCode": 1,
+            "versionName": "1.0.1"
+        },
+        "web": {
+            "favicon": "./assets/favicon.png"
+        },
+        "plugins": ["expo-router", "expo-image-picker", "expo-notifications"],
+        "extra": {
+            "router": {},
+            "eas": {
+                "projectId": "c041a493-dd4e-4f6d-902e-56b0ceb48da6"
+            }
+        }
     }
-  }
 }
