--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
         "version": "1.0.1",
         "orientation": "portrait",
         "icon": "./assets/testicon.png",
-        "userInterfaceStyle": "light",
+        "userInterfaceStyle": "dark",
         "newArchEnabled": true,
         "splash": {
             "image": "./assets/splash-icon-main.png",
