--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-vector-icons/fontawesome6": "^12.2.0",
-    "expo": "~54.0.0",
+    "expo": "54.0.12",
     "expo-constants": "~18.0.0",
-    "expo-dev-client": "~6.0.0",
+    "expo-dev-client": "~6.0.13",
     "expo-image-picker": "~17.0.0",
     "expo-linear-gradient": "~15.0.0",
     "expo-linking": "~8.0.0",
-    "expo-notifications": "~0.32.0",
-    "expo-router": "~6.0.0",
+    "expo-notifications": "~0.32.12",
+    "expo-router": "~6.0.10",
     "expo-status-bar": "~3.0.0",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0"
