--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
         "name": "CoupleTracker",
         "slug": "CoupleTracker",
         "scheme": "coupletracker",
-        "version": "1.0.2",
+        "version": "1.0.3",
         "orientation": "portrait",
         "icon": "./assets/testicon.png",
         "userInterfaceStyle": "dark",
@@ -38,7 +38,11 @@
         "web": {
             "favicon": "./assets/testicon.png"
         },
-        "plugins": ["expo-router", "expo-image-picker", "expo-notifications"],
+        "plugins": [
+            "expo-router",
+            "expo-image-picker",
+            "expo-notifications"
+        ],
         "extra": {
             "router": {},
             "eas": {
