--- a/app.json
+++ b/app.json
@@ -38,7 +38,12 @@
         "web": {
             "favicon": "./assets/testicon.png"
         },
-        "plugins": ["expo-router", "expo-image-picker", "expo-notifications"],
+        "plugins": [
+            "expo-router",
+            "expo-image-picker",
+            "expo-notifications",
+            "./plugins/withAndroidWidget.js"
+        ],
         "extra": {
             "router": {},
             "eas": {
