min and target android versions added

--- a/app.json
+++ b/app.json
@@ -22,6 +22,9 @@
             "icon": "./assets/testicon.png"
         },
         "android": {
+            "minSdkVersion": 24,
+            "targetSdkVersion": 34,
+            "compileSdkVersion": 34,
             "adaptiveIcon": {
                 "foregroundImage": "./assets/adaptive-icon-main.png",
                 "backgroundColor": "#ffffff"
